# homeWorkDjango

./: .gitignore
picture-transformer/: .gitignore  not_formatted_code.py  pyproject.toml  task.py  test_cases.py
task-5/: README.md  main.py  pyproject.toml
task-5/abstracts/: base.py  manager.py  meta.py
task-5/managers/: json_manager.py  sqlite_manager.py
task-5/models/: post.py  user.py
task2/: matrics.py
task4/: main.py  user.py  user_manager.py  users.json
task5/: .env  test.py
task5/data/: posts.json  users.json
task6/myProject/mysite/: create_data.py  generate_data.py
task6/myProject/mysite/blog/: admin.py  models.py  urls.py  views.py
task6/myProject/mysite/blog/migrations/: 0001_initial.py  0002_category_product_review_delete_post.py
task6/myProject/mysite/mysite/: settings.py
task6/myProject/mysite/templates/: base.html
task6/myProject/mysite/templates/blog/: 404.html  category_detail.html  category_list.html  home.html  post_detail.html  post_list.html  product_detail.html  product_list.html  review_detail.html  review_list.html
